[v8] typeof(HTMLMediaElement) should return undefined if media engine is not available https://bugs.webkit.org/show_bug.cgi?id=30343

Patch by Alpha Lam <hclam@chromium.org> on 2009-10-19
Reviewed by Dimitri Glazkov (dglazkov@chromium.org).

Check for availability of the media engine to disable
HTMLMediaElement, HTMLAudioElement, HTMLVideoElement, MediaError
in runtime.

Try runs and review in Chromium:
http://codereview.chromium.org/276011

Test: manual-tests/chromium/media-player-not-available.html

The above test can work work in Chromium. Testing procedures:
1. Remove all media support libraries in Chromium (e.g. ffmpeg libraries)
2. Open Chromium with above test page
3. Verify the test results according to the test page

* bindings/v8/custom/V8CustomBinding.h:
Declare enabler methods.
* bindings/v8/custom/V8DOMWindowCustom.cpp:
Report enabled only if media player is available.
* manual-tests/chromium/media-player-not-available.html: Added.
Manual test, following instruction in this test for procedures.
* page/DOMWindow.idl:
Mark HTMLMediaElement, HTMLAudioElement, HTMLVideElement, MediaError
as enabled at runtime.

Canonical link: https://commits.webkit.org/41257@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49803 268f45cc-cd09-0410-ab3c-d52691b4dbfc